# oc-clin-tier

./: README.md  pyproject.toml
.github/workflows/: stop-nightly.yml  terraform-validate.yml
app/: app.py  db.py  requirements.txt
docker/: Dockerfile  docker-compose.yml
scripts/: stop_dev_resources.sh
terraform/: main.tf  network.tf  variables.tf
terraform/hipaa/: encryption.tf
