[project]
name = "clinic-app"
version = "0.1.0"

authors = [
  { name="ven.ajie", email="venoajie@gmail.com" },
]
description = "A client helper for streaming and notion"
readme = "README.md"
requires-python = "==3.11"
dependencies =  [
  "lyzr",
  "notion-client==2.2.0",
  "streamlit==1.29.0",
  "pandas==2.0.2",
]
